5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1573_2896.log
== TEST (2019-03-13 18:34:29) 
-- CODE:
input("Nome: ")
print(Nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Nome)
NameError: name 'Nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:34:37) 
-- CODE:
input("Nome: ")
print(Nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Nome)
NameError: name 'Nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:34:37) 
-- CODE:
input("Nome: ")
print(Nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Nome)
NameError: name 'Nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:34:37) 
-- CODE:
input("Nome: ")
print(Nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Nome)
NameError: name 'Nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:34:37) 
-- CODE:
input("Nome: ")
print(Nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Nome)
NameError: name 'Nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:34:37) 
-- CODE:
input("Nome: ")
print(Nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Nome)
NameError: name 'Nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:36:07) 
-- CODE:
var = input("Nome: ")
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:36:14) 
-- CODE:
var = input("Nome: ")
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:36:23) 
-- CODE:
var = input("Nome: ")
print(var)
-- EXECUTION TIME:
0.157613
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
